--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div class="header">
 <!---Topnav--->
 <div class="topnav">
-<a href="index.html" alt="Home">Kimetsu 360😜</a>
+<a href="index.html" alt="Home">Kimetsu 360😜😤😋🎉😂</a>
 <!---Open Sidebar---->
 <img onclick="opensidebar()" src="img/bars.svg" class="active"  id="nodisplay" alt="Menu">
 <!---Close Sidebar---->
