--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 <!----END SECTION 3----->
 
 <!----SECTION 6----->
-<script src="footer.js"></script>
+<script src=",,/js/footer.js"></script>
 <!----Js Codes---->
 <script src="js/allscript.js"></script>
 <!----End Js Codes---->
