--- a/index.html
+++ b/index.html
@@ -69,59 +69,18 @@
 </div>
 <!--END GOOGLE SEO ARTICLE RICH DATA-->
 
+<!----NAV--AND--TOPNAV----->
+<script src="js/topnav.js"></script>
+<!----END NAV--AND--TOPNAV--->
 
 <!---HEADER---->
-<div class="header">
-<!---Topnav--->
-<div class="topnav">
-<a href="index.html" alt="Home">Kimetsu 360</a>
-<!---Open Sidebar---->
-<img onclick="opensidebar()" src="img/bars.svg" class="active"  id="nodisplay" alt="Menu">
-<!---Close Sidebar---->
-<img onclick="closesidebar()" src="img/xmark.svg" class="active"  id="displayit" alt="Exit Menu">
-</div>
-<!---End Topnav--->
-
-<!---Sidebar Navigations--->
-<nav id="openav">
-<h3><strong>Kimetsu 360</strong></h3>
-
-<div class="block-1">
-<!---Links----->
-<span><img src="img/house-chimney-window.svg" alt="Home icon"><a href="index.html" rel="tags" alt="Home">Home</a></span></br>
-
-<span><img src="img/book-open-reader.svg" alt="Home icon"><a href="#manga" rel="tags" alt="Manga">Manga</a></span></br>
-
-<span><img src="img/play.svg" alt="Home icon"><a href="#seasons" rel="tags" alt="Episode">Episodes</a></span></br>
-
-<span><img src="img/infinity.svg" alt="Home icon"><a href="#footer" rel="tags" alt="About us">About Us</a></span></br>
-<!---End Links----->
-</div>
-</nav>
-<div id="closenav" onclick="closesidebar()">
-</div>
-<!---End Sidebar Navigations--->
-<!---Header Body--->
 <div class="container-1">
 <img src="img/background-1.webp" alt="Kimetsu Background">
-
-<div class="container-2"><span>&nbsp; Latest &nbsp;</span></div>
-
+<div class="container-2">
+<span>&nbsp; Start reading &nbsp;</span>
+</div>
 <h1>Demon Slayer Manga And Anime Series Online | Kimetsu 360</h1>
-
-<div class="container-3">
-
-<div id="hide"><span><img src="img/calendar_month_white_24dp.svg" alt="calender">Latest post</span></div>
-
-<div><span><img src="img/calendar_month_white_24dp.svg" alt="calender">Updates Regularly</span></div>
-
-<div><a href="https://m.youtube.com/@onepiece-plus" alt="Profile link"><span><img src="img/person_white_24dp.svg" alt="Person">Author: Onepiece plus</span></a></div>
-
-</div>
-</div>
-
-<!---End Header Body--->
-</div>
+<script src="js/manga_page_header.js"></script>
 <!---END HEADER---->
 
 <!----SECTION 1 SEASONS----->
