--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <!--END GOOGLE SEO ARTICLE RICH DATA-->
 
 <!----NAV--AND--TOPNAV----->
-<script src="js/topnav.js"></script>
+<script src="../js/topnav.js"></script>
 <!----END NAV--AND--TOPNAV--->
 
 <!---HEADER---->
