--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
 </head>
 <body>
 
-
+<!--GOOGLE SEO ARTICLE RICH DATA-->
+<script src="../js/manga_google_seo.js"></script>
+<!--END GOOGLE SEO ARTICLE RICH DATA-->
 
 <!----NAV--AND--TOPNAV----->
-<script src="js/topnav.js"></script>
+<script src="../js/topnav.js"></script>
 <!----END NAV--AND--TOPNAV--->
 
 <!---HEADER---->
