--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 <body>
 
 <!--GOOGLE SEO ARTICLE RICH DATA-->
-<script src="../js/manga_google_seo.js"></script>
+<script src="js/manga_google_seo.js"></script>
 <!--END GOOGLE SEO ARTICLE RICH DATA-->
 
 <!----NAV--AND--TOPNAV----->
-<script src="../js/topnav.js"></script>
+<script src="js/topnav.js"></script>
 <!----END NAV--AND--TOPNAV--->
 
 <!---HEADER---->
