--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 <title>Demon Slayer Manga And Anime Series Online | Kimetsu 360</title>
 <meta name="title" content="Demon Slayer Manga And Anime Series Online | Kimetsu 360">
 
-
+<script type="application/ld+json">
+    {
+      "@context" : "https://schema.org",
+      "@type" : "WebSite",
+      "name" : "Kimetsu 360",
+      "url" : "https://reading-manga-online360.on.drv.tw/kimetsu/index.html"
+    }
+  </script>
 
 <meta name="description" content="You are Reading Demon Slayer Manga Online Fully Coloured, Download Latest Anime Episodes And Movies For Free In High Quality Format, only at Kimetsu 360">
 <meta property= "keyword" content= "Demon slayer, demon slayer anime series, demon slayer manga online, read demon slayer manga online, read demon slayer latest chapter online, download demon slayer movies, download demon slayer anime, download demon slayer movies HD, Download demon slayer latest anime series, demon slayer hashira training, demon slayer season 1, demon slayer season 2,demon slayer season 3,demon slayer season 4,demon slayer season 5, kimetsu no yaiba, kimetsu 360">
