--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <div class="container-2">
 <span>&nbsp; Start reading &nbsp;</span>
 </div>
-<h1>Demon Slayer Manga And Anime Series Online | Kimetsu 36g0</h1>
+<h1>Demon Slayer Manga And Anime Series Online | Kimetsu 360</h1>
 <script src="js/manga_page_header.js"></script>
 <!---END HEADER---->
 
