--- a/index.html
+++ b/index.html
@@ -323,7 +323,32 @@
 <!----END SECTION 3----->
 
 <!----SECTION 6----->
-<script src="js/footer.js"></script>
+<footer id="footer">
+<div class="block-1">
+<a href="index.html" alt="home">Home</a>
+<a href="#manga" alt="manga">Manga</a>
+<a href="#seasons" alt="episode">Episode</a>
+<a href="sitemap.txt" alt="sitemap">Sitemap</a>
+</div>
+<div class="block-2">
+<a href="https://www.facebook.com/onepiece360" target="_blank" alt="facebook">Facebook</a>
+<a href="https://m.youtube.com/@onepiece-plus" target="_blank" alt="youtube">Youtube</a>
+<a href="https://onepiece-plus.com.ng" target="_blank" alt="website">Website</a>
+</div>
+<div class="block-3">
+<span>Copyright © Onepiece plus. All rights reserved.  This site is updated, watch episodes and read High Quality manga free. <b> Visit our official website at <a href="https://onepiece-plus.com.ng" target="_blank" alt="Onepiece plus">Onepiece plus</a></b></span>
+</div>
+</footer>
+<!----END SECTION 6----->
+
+<!----MISCELLANEOUS CODE----->
+<div class="apk">
+<a href="https://reading-manga-online360.on.drv.tw/kimetsu/kimetsu.apk" alt="Download Kimetsu Official App">
+<img src="img/apk.webp" alt="apk logo">
+</a>
+</div>
+<!----END MISCELLANEOUS CODE----->
+
 <!----Js Codes---->
 <script src="js/allscript.js"></script>
 <!----End Js Codes---->
