--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       "@context" : "https://schema.org",
       "@type" : "WebSite",
       "name" : "Kimetsu 360",
-      "url" : "https://reading-manga-online360.on.drv.tw/kimetsu/index.html"
+      "url" : "https://demon-slayer.pages.dev"
     }
   </script>
 
