--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -125,6 +125,20 @@
 <!---END HEADER---->
 
 
+<!-----SEASON ONE EPISODES----->
+<div class="container-11">
+<span id="season1">Season One</span>
+
+<div class="block-1">
+<span>Episode 01<a href="#download" alt="Download episode">Download</a></span>
+</div>
+
+
+
+
+</div>
+<!-----END SEASON ONE EPISODES----->
+
 
 <!----SECTION 6----->
 <script src="../js/footer.js"></script>
