--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -134,6 +134,15 @@
 
 <span>Episode 01<a href="#download" alt="Download episode">Download</a></span>
 
+<span>Episode 02<a href="#download" alt="Download episode">Download</a></span>
+
+<span>Episode 03<a href="#download" alt="Download episode">Download</a></span>
+
+<span>Episode 04<a href="#download" alt="Download episode">Download</a></span>
+
+<span>Episode 05<a href="#download" alt="Download episode">Download</a></span>
+
+<span>Episode 06<a href="#download" alt="Download episode">Download</a></span>
 
 </div>
 <!---End Episodes---->
