--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -131,19 +131,27 @@
 
 <!---Episodes---->
 <div class="block-1">
+<div class="row">
 
-<span>Episode 01<a href="#download" alt="Download episode">Download</a></span>
+<div class="column">
+<span>Episode 01<a href="#download" alt="Download episode">Download</a></span></div>
 
-<span>Episode 02<a href="#download" alt="Download episode">Download</a></span>
+<div class="column">
+<span>Episode 02<a href="#download" alt="Download episode">Download</a></span></div>
 
-<span>Episode 03<a href="#download" alt="Download episode">Download</a></span>
+<div class="column">
+<span>Episode 03<a href="#download" alt="Download episode">Download</a></span></div>
 
-<span>Episode 04<a href="#download" alt="Download episode">Download</a></span>
+<div class="column">
+<span>Episode 04<a href="#download" alt="Download episode">Download</a></span></div>
 
-<span>Episode 05<a href="#download" alt="Download episode">Download</a></span>
+<div class="column">
+<span>Episode 05<a href="#download" alt="Download episode">Download</a></span></div>
 
-<span>Episode 06<a href="#download" alt="Download episode">Download</a></span>
+<div class="column">
+<span>Episode 06<a href="#download" alt="Download episode">Download</a></span></div>
 
+</div>
 </div>
 <!---End Episodes---->
 
