--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -133,22 +133,22 @@
 <div class="block-1">
 <div class="row">
 
-<div class="column">
+<div class="columns">
 <span>Episode 01<a href="#download" alt="Download episode">Download</a></span></div>
 
-<div class="column">
+<div class="columns">
 <span>Episode 02<a href="#download" alt="Download episode">Download</a></span></div>
 
-<div class="column">
+<div class="columns">
 <span>Episode 03<a href="#download" alt="Download episode">Download</a></span></div>
 
-<div class="column">
+<div class="columns">
 <span>Episode 04<a href="#download" alt="Download episode">Download</a></span></div>
 
-<div class="column">
+<div class="columns">
 <span>Episode 05<a href="#download" alt="Download episode">Download</a></span></div>
 
-<div class="column">
+<div class="columns">
 <span>Episode 06<a href="#download" alt="Download episode">Download</a></span></div>
 
 </div>
