--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -134,22 +134,22 @@
 <div class="row">
 
 <div class="columns">
-<div>Episode 01<a href="#download" alt="Download episode">Download</a></div></div>
+<span>Episode 01<a href="#download" alt="Download episode">Download</a></span></div>
 
 <div class="columns">
-<div>Episode 02<a href="#download" alt="Download episode">Download</a></div></div>
+<span>Episode 02<a href="#download" alt="Download episode">Download</a></span></div>
 
 <div class="columns">
-<div>Episode 03<a href="#download" alt="Download episode">Download</a></div></div>
+<span>Episode 03<a href="#download" alt="Download episode">Download</a></span></div>
 
 <div class="columns">
-<div>Episode 04<a href="#download" alt="Download episode">Download</a></div></div>
+<span>Episode 04<a href="#download" alt="Download episode">Download</a></span></div>
 
 <div class="columns">
-<div>Episode 05<a href="#download" alt="Download episode">Download</a></div></div>
+<span>Episode 05<a href="#download" alt="Download episode">Download</a></span></div>
 
 <div class="columns">
-<div>Episode 06<a href="#download" alt="Download episode">Download</a></div></div>
+<span>Episode 06<a href="#download" alt="Download episode">Download</a></span></div>
 
 </div>
 </div>
