--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -126,15 +126,17 @@
 
 
 <!-----SEASON ONE EPISODES----->
-<div class="container-11">
+<div class="container-11" itemscope itemtype="https://schema.org/BreadcrumbList">
 <span id="season1">Season One</span>
 
 <!---Episodes---->
 <div class="block-1">
 <div class="row">
 
-<div class="columns">
-<span>Episode 01<a href="#download" alt="Download episode">Download</a></span></div>
+<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+<span itemprop="name">Episode 01<a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
+<meta itemprop="position" content="1">
+</div>
 
 <div class="columns">
 <span>Episode 02<a href="#download" alt="Download episode">Download</a></span></div>
