--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -127,7 +127,7 @@
 
 <!-----SEASON ONE EPISODES----->
 <div class="container-11" itemscope itemtype="https://schema.org/BreadcrumbList">
-<span id="season1">Season One</span>
+<h2 id="season1">Season One</h2>
 
 <!---Episodes---->
 <div class="block-1">
