--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -134,24 +134,11 @@
 <div class="row">
 
 <div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span itemprop="name">Episode 01<a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
+<span><span itemprop="name">Episode 01</span><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
 <meta itemprop="position" content="1">
 </div>
 
-<div class="columns">
-<span>Episode 02<a href="#download" alt="Download episode">Download</a></span></div>
 
-<div class="columns">
-<span>Episode 03<a href="#download" alt="Download episode">Download</a></span></div>
-
-<div class="columns">
-<span>Episode 04<a href="#download" alt="Download episode">Download</a></span></div>
-
-<div class="columns">
-<span>Episode 05<a href="#download" alt="Download episode">Download</a></span></div>
-
-<div class="columns">
-<span>Episode 06<a href="#download" alt="Download episode">Download</a></span></div>
 
 </div>
 </div>
