--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -172,6 +172,59 @@
 <!-----END SEASON ONE EPISODES----->
 
 
+<!-----SEASON TWO EPISODES----->
+<div class="container-11" itemscope itemtype="https://schema.org/BreadcrumbList">
+<h2 id="season1">Season Two</h2>
+
+<!---Episodes---->
+<div class="block-1">
+<div class="row">
+
+<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+<span><strong itemprop="name">Episode 01</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
+<meta itemprop="position" content="1">
+</div>
+
+<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+<span><strong itemprop="name">Episode 02</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
+<meta itemprop="position" content="1">
+</div>
+
+<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+<span><strong itemprop="name">Episode 03</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
+<meta itemprop="position" content="1">
+</div>
+
+<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+<span><strong itemprop="name">Episode 04</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
+<meta itemprop="position" content="1">
+</div>
+
+<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+<span><strong itemprop="name">Episode 05</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
+<meta itemprop="position" content="1">
+</div>
+
+<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+<span><strong itemprop="name">Episode 06</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
+<meta itemprop="position" content="1">
+</div>
+
+
+</div>
+</div>
+<!---End Episodes---->
+
+</div>
+<!-----END SEASON TWO EPISODES----->
+
+
+
+
+
+
+
+
 <!----SECTION 6----->
 <script src="../js/footer.js"></script>
 <!----Js Codes---->
