--- a/index.html
+++ b/index.html
@@ -132,19 +132,19 @@
 <div class="block-1">
 
 <!---Repeated main content--->
-<div itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem"><a href="seasons/download-episodes.html" itemprop="url" alt="Season 4"><img itemprop="image" src="img/cdn/background.webp" alt="Kimetsu Season 4 image"><h2 itemprop="name">Kimetsu No Yaiba : The Hashira Training Arc</br> <span>Season 4</span></h2></a>
+<div itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem"><a href="seasons/download-episodes.html#season4" itemprop="url" alt="Season 4"><img itemprop="image" src="img/cdn/background.webp" alt="Kimetsu Season 4 image"><h2 itemprop="name">Kimetsu No Yaiba : The Hashira Training Arc</br> <span>Season 4</span></h2></a>
 <meta itemprop="position" content="1">
 </div>
 
-<div itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem"><a href="seasons/download-episodes.html" itemprop="url" alt="Season 3"><img itemprop="image" src="img/cdn/background.webp" alt="Kimetsu Season 3 image"><h2 itemprop="name">Kimetsu No Yaiba : The Hashira Training Arc</br> <span>Season 3</span></h2></a>
+<div itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem"><a href="seasons/download-episodes.html#season3" itemprop="url" alt="Season 3"><img itemprop="image" src="img/cdn/background.webp" alt="Kimetsu Season 3 image"><h2 itemprop="name">Kimetsu No Yaiba : The Hashira Training Arc</br> <span>Season 3</span></h2></a>
 <meta itemprop="position" content="2">
 </div>
 
-<div itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem"><a href="seasons/download-episodes.html" itemprop="url" alt="Season 2"><img itemprop="image" src="img/cdn/background.webp" alt="Kimetsu Season 2 image"><h2 itemprop="name">Kimetsu No Yaiba : The Hashira Training Arc</br> <span>Season 2</span></h2></a>
+<div itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem"><a href="seasons/download-episodes.html#season2" itemprop="url" alt="Season 2"><img itemprop="image" src="img/cdn/background.webp" alt="Kimetsu Season 2 image"><h2 itemprop="name">Kimetsu No Yaiba : The Hashira Training Arc</br> <span>Season 2</span></h2></a>
 <meta itemprop="position" content="3">
 </div>
 
-<div itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem"><a href="seasons/download-episodes.html" itemprop="url" alt="Season 1"><img itemprop="image" src="img/cdn/background.webp" alt="Kimetsu Season 1 image"><h2 itemprop="name">Kimetsu No Yaiba : The Hashira Training Arc</br> <span>Season 1</span></h2></a>
+<div itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem"><a href="seasons/download-episodes.html#season1" itemprop="url" alt="Season 1"><img itemprop="image" src="img/cdn/background.webp" alt="Kimetsu Season 1 image"><h2 itemprop="name">Kimetsu No Yaiba : The Hashira Training Arc</br> <span>Season 1</span></h2></a>
 <meta itemprop="position" content="4">
 </div>
 <!---End repeated main content--->
