--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -172,41 +172,35 @@
 	
 
 <!-----SEASON THREE EPISODES----->
-<div class="container-11" itemscope itemtype="https://schema.org/BreadcrumbList">
+<div class="container-11">
 <h2 id="season3">Season Three</h2>
 
 <!---Episodes---->
 <div class="block-1">
 <div class="row">
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 01</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 01</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 02</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 02</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 03</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 03</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 04</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 04</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 05</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 05</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 06</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
 </div>
@@ -218,41 +212,35 @@
 	
 
 <!-----SEASON TWO EPISODES----->
-<div class="container-11" itemscope itemtype="https://schema.org/BreadcrumbList">
-<h2 id="season2">Season Two</h2>
+<div class="container-11">
+<h2 id="season3">Season Two</h2>
 
 <!---Episodes---->
 <div class="block-1">
 <div class="row">
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 01</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 01</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 02</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 02</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 03</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 03</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 04</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 04</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 05</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 05</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 06</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
 </div>
@@ -263,52 +251,45 @@
 <!-----END SEASON TWO EPISODES----->
 
 
-
 <!-----SEASON ONE EPISODES----->
-<div class="container-11" itemscope itemtype="https://schema.org/BreadcrumbList">
-<h2 id="season1">Season One</h2>
+<div class="container-11">
+<h2 id="season3">Season One</h2>
 
 <!---Episodes---->
 <div class="block-1">
 <div class="row">
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 01</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 01</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 02</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 02</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 03</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 03</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 04</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 04</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 05</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 05</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><strong itemprop="name">Episode 06</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
-<meta itemprop="position" content="1">
+<div class="columns">
+<span><strong>Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
-
 
 </div>
 </div>
 <!---End Episodes---->
+
 </div>
 <!-----END SEASON ONE EPISODES----->
-
+	
 
 <!----SECTION 6----->
 <script src="../js/footer.js"></script>
