--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -134,7 +134,7 @@
 <div class="row">
 
 <div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode"><strong itemprop="name">Episode 01</strong>Download</a></span>
+<span><strong itemprop="name">Episode 01</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
 <meta itemprop="position" content="1">
 </div>
 
