--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -123,7 +123,8 @@
 <!---End Header Body--->
 </div>
 <!---END HEADER---->
-	
+
+<p><span>Description:</span> Download Demon Slayer Episodes Online. You are Downloading the Latest Episodes, Movies And More of demon slayer series In free HD Formats, only at Kimetsu 360</p>
 	
 <!-----SEASON FOUR EPISODES----->
 <div class="container-11" itemscope itemtype="https://schema.org/BreadcrumbList">
@@ -288,7 +289,10 @@
 
 </div>
 <!-----END SEASON ONE EPISODES----->
-	
+
+<!--SECTION 2 KEYWORDS CHAPTERS-->
+<div class="container-10"><p rel="tags"><span>Tags:</span> Demon slayer, demon slayer anime series, demon slayer manga online, read demon slayer manga online, read demon slayer latest chapter online, download demon slayer movies, download demon slayer anime, download demon slayer movies HD, Download demon slayer latest anime series, demon slayer hashira training, demon slayer season 1, demon slayer season 2,demon slayer season 3,demon slayer season 4,demon slayer season 5, kimetsu no yaiba, kimetsu 360</p></div>
+<!--END SECTION 2 KEYWORDS CHAPTERS-->
 
 <!----SECTION 6----->
 <script src="../js/footer.js"></script>
