--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -292,7 +292,7 @@
 <!-----END SEASON ONE EPISODES----->
 
 <!--SECTION 2 KEYWORDS CHAPTERS-->
-<div class="container-10"><p rel="tags"><span>Tags:</span> Demon slayer, demon slayer anime series, demon slayer manga online, read demon slayer manga online, read demon slayer latest chapter online, download demon slayer movies, download demon slayer anime, download demon slayer movies HD, Download demon slayer latest anime series, demon slayer hashira training, demon slayer season 1, demon slayer season 2,demon slayer season 3,demon slayer season 4,demon slayer season 5, kimetsu no yaiba, kimetsu 360</p></div>
+<div class="container-10"><p rel="tags" style="display: flex;"><span>Tags:</span> Demon slayer, demon slayer anime series, demon slayer manga online, read demon slayer manga online, read demon slayer latest chapter online, download demon slayer movies, download demon slayer anime, download demon slayer movies HD, Download demon slayer latest anime series, demon slayer hashira training, demon slayer season 1, demon slayer season 2,demon slayer season 3,demon slayer season 4,demon slayer season 5, kimetsu no yaiba, kimetsu 360</p></div>
 <!--END SECTION 2 KEYWORDS CHAPTERS-->
 
 <!----SECTION 6----->
