--- a/404.html
+++ b/404.html
@@ -1,1 +1,59 @@
-<h1>Hey hello world</h1>
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+<!-- Primary Meta Tags -->
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial scale=1">
+<link rel="canonical" href="https://https://demon-slayer.pages.dev/404.html">
+<title>404 Error showing</title>
+<meta name="title" content="404 Error showing">
+
+<script type="application/ld+json">
+    {
+      "@context" : "https://schema.org",
+      "@type" : "WebSite",
+      "name" : "Kimetsu 360",
+      "url" : "https://demon-slayer.pages.dev/404.html"
+    }
+  </script>
+
+<meta name="description" content="404 showing, it seems that you entered a wrong keyword or page doesn't Exist. please go back home">
+<meta property= "keyword" content= "Demon slayer, demon slayer anime series, demon slayer manga online, read demon slayer manga online, read demon slayer latest chapter online, download demon slayer movies, download demon slayer anime, download demon slayer movies HD, Download demon slayer latest anime series, demon slayer hashira training, demon slayer season 1, demon slayer season 2,demon slayer season 3,demon slayer season 4,demon slayer season 5, kimetsu no yaiba, kimetsu 360">
+<meta property= "og:keyword" content= "Demon slayer, demon slayer anime series, demon slayer manga online, read demon slayer manga online, read demon slayer latest chapter online, download demon slayer movies, download demon slayer anime, download demon slayer movies HD, Download demon slayer latest anime series, demon slayer hashira training, demon slayer season 1, demon slayer season 2,demon slayer season 3,demon slayer season 4,demon slayer season 5, kimetsu no yaiba, kimetsu 360">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+<meta property="og:image" href="img/background-1.webp">
+<link rel="icon" href="img/logo.webp">
+<link rel="og:icon" href="img/logo.webp">
+<link rel="stylesheet" href="css/style.css">
+
+<!-- Google / Search Engine Tags -->
+<meta itemprop="name" content="404 Error showing">
+<meta itemprop="description" content="404 showing, it seems that you entered a wrong keyword or page doesn't Exist. please go back home">
+<meta itemprop="image" content="img/background-1.webp">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="Kimetsu 360">
+<meta property="og:url" content="https://demon-slayer.pages.dev/404.html">
+<meta property="og:title" content="404 Error showing">
+<meta property="og:description" content="404 showing, it seems that you entered a wrong keyword or page doesn't Exist. please go back home">
+<meta property="og:image" content="img/background-1.webp">
+ 
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image"/>
+<meta property="twitter:url" content="https://demon-slayer.pages.dev/404.html">
+<meta property="twitter:title" content="404 Error showing">
+<meta property="twitter:description" content="404 showing, it seems that you entered a wrong keyword or page doesn't Exist. please go back home">
+<meta property="twitter:image" content="img/background-1.webp">
+</head>
+<body>
+
+<div class="errorpage">
+<h1> 404 showing, it seems that you entered a wrong keyword or page doesn't Exist. please go back <a href="index.html">HOME</a></h1>
+</div>
+
+</body>
+</html>
